--- a/.github/workflows/ci-push-dockerhub.yml
+++ b/.github/workflows/ci-push-dockerhub.yml
@@ -8,7 +8,7 @@ on:
     branches: [ "main" ]
 
     env:
-  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/flask-hello-simple
+  IMAGE_NAME: ubk209/flask-hello-simple
 
 
 jobs:
