--- a/.github/workflows/ci-push-dockerhub.yml
+++ b/.github/workflows/ci-push-dockerhub.yml
@@ -1,83 +1,85 @@
 name: CI → Build, Scan, Push to Docker Hub & Deploy
 
-
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
-    env:
-  IMAGE_NAME: ubuntu/flask-hello-simple
-
+env:
+  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/flask-hello-simple
 
 jobs:
   ci:
     runs-on: ubuntu-latest
+
     steps:
+      # Checkout repository
       - name: Checkout code
         uses: actions/checkout@v4
 
-
+      # Setup Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '2.5.1'
+          python-version: "3.11"
 
-
-      - name: Install Python deps
+      # Install dependencies and security tools
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install bandit pip-audit pytest
 
-
+      # Run unit tests
       - name: Run tests
         env:
           PYTHONPATH: ${{ github.workspace }}
         run: pytest -q
 
-
+      # Static Application Security Testing
       - name: Run Bandit (SAST)
-        run: |
-          bandit -r . || true
+        run: bandit -r . || true
 
-
+      # Software Composition Analysis
       - name: Run pip-audit (SCA)
-        run: |
-          pip-audit --output-format text || true
+        run: pip-audit --output-format text || true
 
-
+      # Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-
+      # Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-
-      - name: Build Docker image and tag latest + SHA
+      # Build Docker image
+      - name: Build Docker image (latest + SHA)
         run: |
-          docker build -t ${{ env.IMAGE_NAME }}:${{ github.sha }} -t ${{ env.IMAGE_NAME }}:latest .
+          docker build \
+            -t ${{ env.IMAGE_NAME }}:${{ github.sha }} \
+            -t ${{ env.IMAGE_NAME }}:latest .
 
-
-      - name: Scan Docker image with Trivy (run CLI)
+      # Scan Docker image with Trivy
+      - name: Scan Docker image with Trivy
         run: |
           docker pull aquasec/trivy:latest
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy:latest image --format table ${{ env.IMAGE_NAME }}:${{ github.sha }} || true
+          docker run --rm \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            aquasec/trivy:latest image \
+            --format table \
+            ${{ env.IMAGE_NAME }}:${{ github.sha }} || true
 
-
-
-
-      - name: Push image to Docker Hub (latest & sha)
+      # Push image to Docker Hub
+      - name: Push image to Docker Hub
         run: |
           docker push ${{ env.IMAGE_NAME }}:${{ github.sha }}
           docker push ${{ env.IMAGE_NAME }}:latest
 
-
-      # Optional deploy step (only runs on main branch)
+      # Deploy only on main branch
       - name: Deploy to remote server via SSH
         if: github.ref == 'refs/heads/main'
         uses: appleboy/ssh-action@v0.1.8
@@ -86,9 +88,12 @@ jobs:
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_KEY }}
           script: |
-            docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_TOKEN }}
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
             docker pull ${{ env.IMAGE_NAME }}:latest
             docker stop flask-hello || true
             docker rm flask-hello || true
-           
-            docker run -d --name flask-hello --restart unless-stopped -p 80:5000 ${{ env.IMAGE_NAME }}:latest
+            docker run -d \
+              --name flask-hello \
+              --restart unless-stopped \
+              -p 80:5000 \
+              ${{ env.IMAGE_NAME }}:latest
